Fixed the colour contrast on the call to action

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ nav li:first-child a:hover {
     width: 60%;
     height: 60px;
     color: white;
-    background-color: #F9A620;
+    background-color: #272932;
     border: 1 solid #272932;
     border-radius: 10px;
 
